Add sequence_id for TabManager.ForegroundedOrClosed event

Bug: 843891

Change-Id: I7fba61c7a46a8d0b6a3dabdc37b9209510c9cb15
Reviewed-on: https://chromium-review.googlesource.com/1064651
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Reviewed-by: Andrew Moylan <amoylan@chromium.org>
Reviewed-by: oysteine <oysteine@chromium.org>
Commit-Queue: Charles . <charleszhao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567089}
Former-commit-id: 9570d33e23920f41132c01728f1440fa2d7c5de5